<resources>
    <string name="app_name">Success</string>
    <string name="amount_left">Amount Left</string>
    <string name="expenses_amount">Expenses</string>
    <string name="go_to_month">Go to month</string>
    <string name="normal_payments">Normal Payments</string>
    <string name="six_month_payments">Six Month Payments</string>
    <string name="amount">Amount</string>
    <string name="payment_name">Payment name</string>
    <string name="date_of_purchase">01.20.2023</string>
    <string name="time_of_purchase">Time of purchase</string>
    <string name="necessary">Necessary</string>
    <string name="cash">Cash</string>
    <string name="add">Add</string>
    <string name="pay">Pay</string>
    <string name="time">16:00:00</string>
    <string name="bank">Bank</string>
    <string name="salary">Salary</string>
    <string name="expenses">Expenses</string>
    <string name="three_month_payments">Three Month Payments</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="number_of_payments">Number of Payments</string>
    <string name="zero">0</string>
    <string name="loans">Loans</string>
    <string name="add_salary">Add Salary</string>
    <string name="enter_water_bill">Enter Water Bill</string>
    <string name="enter_power_bill">Enter Power Bill</string>
    <string name="start_workout">Start Workout</string>
    <string name="pay_payment">Pay Payment</string>
    <string name="delete">DELETE</string>
    <string name="paid">Paid</string>
    <string name="date">Date</string>
    <string name="cost">Cost</string>
    <string name="monthly">Monthly</string>
    <string name="next">Next</string>
    <string name="reps">Reps:</string>
    <string name="number_of_reps">Number of Reps</string>
    <string name="add_icon">Add Icon</string>
    <string name="remove_icon">Remove Icon</string>
    <string name="exercise">Exercise</string>
    <string name="delete_confirmation">Are you sure you want to delete these payments?</string>
    <string name="add_payment">Add Payment</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="pay_confirmation">Are you sure you want to pay the following objects?</string>
    <string name="select_categories">Select Categories</string>
    <string name="see_less">See less</string>
    <string name="see_more">See more</string>
    <string name="category">Category</string>
    <string name="res_true">True</string>
    <string name="takeaway_food">Takeaway Food</string>
    <string name="best_set">Best Set</string>
    <string name="last_set">Last Set</string>
    <string name="today_s_workout">Today\'s Workout:</string>
    <string name="other_workouts">Other Workouts:</string>
    <string name="skip_exercise">Skip Exercise</string>
    <string name="next_exercise">Next Exercise: %1$s</string>
</resources>