<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.finances.AddPaymentFragment">

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Amount"
        android:ems="13"
        android:hint="@string/amount"
        android:inputType="number"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPaymentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Payment Name"
        android:ems="13"
        android:hint="@string/payment_name"
        android:inputType="textPersonName"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Date of Purchase"
        android:clickable="false"
        android:ems="13"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date_of_purchase"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/etPaymentName"
        app:layout_constraintTop_toBottomOf="@+id/etPaymentName" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Time of Purchase"
        android:ems="13"
        android:hint="@string/time"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <EditText
        android:id="@+id/etPayments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Number of Payments"
        android:ems="13"
        android:hint="@string/number_of_payments"
        android:inputType="number"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <Spinner
        android:id="@+id/spPaymentType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etPayments"
        app:layout_constraintStart_toStartOf="@+id/etPayments"
        app:layout_constraintTop_toBottomOf="@+id/etPayments" />

    <Spinner
        android:id="@+id/spLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/spPaymentType"
        app:layout_constraintStart_toStartOf="@+id/spPaymentType"
        app:layout_constraintTop_toBottomOf="@+id/spPaymentType" />

    <CheckBox
        android:id="@+id/cbNecessary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/necessary"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/cbCash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spLocation" />

    <CheckBox
        android:id="@+id/cbCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cash"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbNecessary"
        app:layout_constraintTop_toBottomOf="@+id/spLocation" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/md_theme_dark_secondary"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd" />


</androidx.constraintlayout.widget.ConstraintLayout>